Fixed responsiveness for password visibility

--- a/web/src/styles/Login.css
+++ b/web/src/styles/Login.css
@@ -304,13 +304,13 @@ h1 {
 }
 
 .checkbox_wrapper1 img{
-  right: 270px;
-  top: 95px;
+  right: 15px;
+  top: 23px;
 }
 
 .checkbox_wrapper2 img{
-  left: 666px;
-  top: 192px;
+  right: 15px;
+  top: 23px;
 }
 
 .pass-popup{
