--- a/web/src/styles/Register.css
+++ b/web/src/styles/Register.css
@@ -490,4 +490,9 @@
 
 .new-pass{
   padding-bottom: 50px;
+  position: relative;
+}
+
+.confirm-pass{
+  position: relative;
 }
